--- a/1)Notes/8-OOP's/Magic_methods.ipynb
+++ b/1)Notes/8-OOP's/Magic_methods.ipynb
@@ -85,6 +85,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Person object at 0x000001FDEB7CBB90>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic Magic methods\n",
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "person = Person(\"vaibhs\",20)\n",
+    "print(person)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This above message is by default due to __str__ Magic method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vaibhs is 20 years old\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now we overriding this magic method\n",
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "\n",
+    "    # Overriding this magic method here\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.name} is {self.age} years old\"\n",
+    "    \n",
+    "    person = Person(\"vaibhs\",20)\n",
+    "    print(person)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
