--- a/1)Notes/8-OOP's/Magic_methods.ipynb
+++ b/1)Notes/8-OOP's/Magic_methods.ipynb
@@ -115,14 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vaibhs is 20 years old\n"
+      "vaibhs is 20 years old\n",
+      "Person(name=vaibhs,age=20)\n"
      ]
     }
    ],
@@ -137,8 +138,14 @@
     "    def __str__(self):\n",
     "        return f\"{self.name} is {self.age} years old\"\n",
     "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Person(name={self.name},age={self.age})\"\n",
+    "\n",
+    "    \n",
+    "    \n",
     "    person = Person(\"vaibhs\",20)\n",
-    "    print(person)"
+    "    print(person)\n",
+    "    print(repr(person))"
    ]
   },
   {
