--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -66,11 +66,96 @@
     "\n",
     "Create a class named `Calculator` with methods to add, subtract, multiply, and divide. Each method should return the object itself to allow method chaining. Create an object and chain multiple method calls."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "59accd56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self,name,model,year):\n",
+    "        self.name=name\n",
+    "        self.model=model\n",
+    "        self.year=year\n",
+    "car = Car(\"BMW\",\"XUV\",2024)\n",
+    "print(car.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fa50ef0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW's Engine started\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    def __init__(self,name,model,year):\n",
+    "        self.name=name\n",
+    "        self.model=model\n",
+    "        self.year=year\n",
+    "    def engine_start(self):\n",
+    "        print(f\"{self.name}'s Engine started\")\n",
+    "\n",
+    "car = Car(\"BMW\",\"XUV\",2024)\n",
+    "car.engine_start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a9d44e16",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vaibhs\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "\n",
+    "student = Student(\"vaibhs\",20)\n",
+    "print(student.name)\n",
+    "print(student.age)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20c659c2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -84,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
