--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -146,8 +146,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "20c659c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000000000000\n",
+      "4999960000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self,account_number,balance=0):\n",
+    "        self.__account_number=account_number\n",
+    "        self.__balance=balance\n",
+    "\n",
+    "    def deposit(self,amount):\n",
+    "        self.__balance+=amount\n",
+    "\n",
+    "    def withdraw(self,amount):\n",
+    "        if amount>self.__balance:\n",
+    "            print(\"Insufficient balance\")\n",
+    "\n",
+    "        else:\n",
+    "            self.__balance-=amount\n",
+    "\n",
+    "    def check_balance(self):\n",
+    "        return self.__balance\n",
+    "    \n",
+    "\n",
+    "bank_account=BankAccount('123',5000000000000)\n",
+    "print(bank_account.check_balance())\n",
+    "bank_account.withdraw(40000000)\n",
+    "print(bank_account.check_balance())\n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83ef9283",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -155,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -169,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
