--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -190,8 +190,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "83ef9283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "krish\n",
+      "32\n",
+      "ms123\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "\n",
+    "class Employee(Person):\n",
+    "    def __init__(self,name,age,employee_id):\n",
+    "        super().__init__(name,age)\n",
+    "        self.employee_id=employee_id\n",
+    "\n",
+    "employee=Employee(\"krish\",32,'ms123')\n",
+    "print(employee.name)\n",
+    "print(employee.age)\n",
+    "print(employee.employee_id)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64513bb0",
    "metadata": {},
    "outputs": [],
    "source": []
