--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -223,8 +223,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "64513bb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee(name:Alice,age:30,id:E123)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Employee:\n",
+    "    def __init__(self,name,age,e_id):\n",
+    "        self.name=name\n",
+    "        self.age=age\n",
+    "        self.id=e_id\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Employee(name:{self.name},age:{self.age},id:{self.id})\"\n",
+    "\n",
+    "employee = Employee('Alice', 30, 'E123')\n",
+    "\n",
+    "print(employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7465c99d",
    "metadata": {},
    "outputs": [],
    "source": []
