--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -252,8 +252,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "7465c99d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wallstreet NewYork 410401\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Address:\n",
+    "    def __init__(self,street,city,pincode):\n",
+    "        self.street=street\n",
+    "        self.city=city\n",
+    "        self.pincode=pincode\n",
+    "\n",
+    "class Person:\n",
+    "    def __init__(self,name,address):\n",
+    "        self.name=name\n",
+    "        self.address=address\n",
+    "\n",
+    "address=Address(\"wallstreet\",\"NewYork\",410401)\n",
+    "person = Person(\"Jonh\",address)\n",
+    "print(person.address.street,person.address.city,person.address.pincode) # --> class composition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9d625e8",
    "metadata": {},
    "outputs": [],
    "source": []
