--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -283,8 +283,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "b9d625e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Counter:\n",
+    "    count=0\n",
+    "    def __init__(self):\n",
+    "        Counter.count+=1\n",
+    "\n",
+    "    @classmethod\n",
+    "    def get_count(cls):\n",
+    "        return cls.count\n",
+    "    \n",
+    "c1=Counter()\n",
+    "c2=Counter()\n",
+    "c3=Counter()\n",
+    "c4=Counter()\n",
+    "c5=Counter()\n",
+    "print(Counter.get_count())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "644ed14f",
    "metadata": {},
    "outputs": [],
    "source": []
