--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -315,8 +315,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "644ed14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class MathOperations:\n",
+    "    @staticmethod\n",
+    "    def sqrt(x):\n",
+    "        return math.sqrt(x)\n",
+    "    \n",
+    "print(MathOperations.sqrt(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1278a3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 5\n",
+      "1 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self,width,height):\n",
+    "        self.__width=width\n",
+    "        self.__height=height\n",
+    "    \n",
+    "    @property\n",
+    "    def width(self):\n",
+    "        return self.__width\n",
+    "    @property\n",
+    "    def height(self):\n",
+    "        return self.__height\n",
+    "    \n",
+    "    @width.setter\n",
+    "    def width(self,width):\n",
+    "        self.__width=width\n",
+    "\n",
+    "    @height.setter\n",
+    "    def height(self,height):\n",
+    "        self.__height=height\n",
+    "\n",
+    "rect = Rectangle(10, 5)\n",
+    "print(rect.width, rect.height)\n",
+    "rect.width = 1\n",
+    "rect.height= 7\n",
+    "print(rect.width,rect.height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "758a2235",
    "metadata": {},
    "outputs": [],
    "source": []
