--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -383,8 +383,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "758a2235",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.53981633974483\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Shape(ABC):\n",
+    "    @abstractmethod\n",
+    "    def area(self):\n",
+    "        pass\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, radius):\n",
+    "        self.radius = radius\n",
+    "\n",
+    "    def area(self):\n",
+    "        return math.pi * self.radius ** 2\n",
+    "\n",
+    "class Square(Shape):\n",
+    "    def __init__(self, side):\n",
+    "        self.side = side\n",
+    "\n",
+    "    def area(self):\n",
+    "        return self.side ** 2\n",
+    "    \n",
+    "\n",
+    "circle = Circle(5)\n",
+    "square = Square(4)\n",
+    "print(circle.area())  # 78.53981633974483\n",
+    "print(square.area())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4f1834ef",
    "metadata": {},
    "outputs": [],
    "source": []
