--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -427,8 +427,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "4f1834ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Que 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef90573a",
    "metadata": {},
    "outputs": [],
    "source": []
