--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -441,7 +441,9 @@
    "id": "ef90573a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Jdhd"
+   ]
   }
  ],
  "metadata": {
