--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -444,6 +444,16 @@
    "source": [
     "Jdhd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f0368f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "erff"
+   ]
   }
  ],
  "metadata": {
