--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -454,6 +454,22 @@
    "source": [
     "erff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "716c671e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1fa6efc",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
