--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -427,8 +427,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8d333cc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (2134221865.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    class vector:\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "class vector:\n",
+    "    def __init__(self,x,y):\n",
+    "        self.x=x\n",
+    "        self.y=y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4572a71",
    "metadata": {},
    "outputs": [],
    "source": []
