--- a/2)Assignments/Assignment11(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment11(class&objects)solution.ipynb
@@ -427,16 +427,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "8d333cc0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (2134221865.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    class vector:\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vector(9,9)\n"
      ]
     }
    ],
@@ -444,7 +443,18 @@
     "class vector:\n",
     "    def __init__(self,x,y):\n",
     "        self.x=x\n",
-    "        self.y=y"
+    "        self.y=y\n",
+    "\n",
+    "    def __add__(self,other):\n",
+    "        return vector(self.x+other.x,self.y+other.y)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f\"vector({self.x},{self.y})\"\n",
+    "\n",
+    "v1=vector(5,4)\n",
+    "v2=vector(4,5)\n",
+    "v3=v1+v2\n",
+    "print(v3)"
    ]
   },
   {
