--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -70,10 +70,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "9600bbd8",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
    "outputs": [],
    "source": [
-    "jonh"
+    "hello"
    ]
   }
  ],
