--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -66,6 +66,40 @@
     "\n",
     "Create a base class named `Device` with an attribute `brand`. Create a derived class `Phone` that inherits from `Device` and adds an attribute `model`. Create another base class `Camera` with an attribute `resolution`. Create a derived class `Smartphone` that inherits from both `Phone` and `Camera`. Create an object of the `Smartphone` class and print its attributes."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "47662fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "buddy\n",
+      "pitbull\n",
+      "dog\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self,name,species):\n",
+    "        self.name=name\n",
+    "        self.species=species\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def __init__(self,breed,name,species):\n",
+    "        super().__init__(name,species)\n",
+    "        self.breed=breed\n",
+    "\n",
+    "dog = Dog(\"pitbull\",\"buddy\",\"dog\")\n",
+    "\n",
+    "print(dog.name)\n",
+    "print(dog.breed)\n",
+    "print(dog.species)"
+   ]
   }
  ],
  "metadata": {
@@ -84,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
