--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -100,6 +100,41 @@
     "print(dog.breed)\n",
     "print(dog.species)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "568bdf2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dog(name:pitbull,breed:buddy,species:dog)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog(Animal):\n",
+    "    def __init__(self,name,breed,species):\n",
+    "        super().__init__(name,species)\n",
+    "        self.breed=breed\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Dog(name:{self.name},breed:{self.breed},species:{self.species})\"\n",
+    "    \n",
+    "dog = Dog(\"pitbull\",\"buddy\",\"dog\")\n",
+    "print(dog.__str__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "182f53c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
