--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -130,8 +130,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "182f53c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pitbull says woof woof !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog(Animal):\n",
+    "    def __init__(self,name,breed,species):\n",
+    "        super().__init__(name,species)\n",
+    "        self.breed=breed\n",
+    "\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} says woof woof !!!\")\n",
+    "\n",
+    "dog = Dog(\"pitbull\",\"buddy\",\"dog\")\n",
+    "dog.bark()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d2d7b0c",
    "metadata": {},
    "outputs": [],
    "source": []
