--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -157,8 +157,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9d2d7b0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "running\n",
+      "None\n",
+      "walking!!!\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "class walker:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def walk(self):\n",
+    "        print(\"walking!!!\")\n",
+    "\n",
+    "class runner:\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def run(self):\n",
+    "        print(\"running\")\n",
+    "\n",
+    "class athlete(walker,runner):\n",
+    "    pass\n",
+    "\n",
+    "Ath=athlete()\n",
+    "\n",
+    "print(Ath.run())\n",
+    "print(Ath.walk())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8dba7102",
    "metadata": {},
    "outputs": [],
    "source": []
