--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -197,8 +197,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8dba7102",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "walking fastly\n",
+      "walking!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Athlete(walker,runner):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def walk(self):\n",
+    "        print(\"walking fastly\")\n",
+    "        super().walk()\n",
+    "ath=Athlete()\n",
+    "ath.walk()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7490a61b",
    "metadata": {},
    "outputs": [],
    "source": []
