--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -223,8 +223,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7490a61b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 5 hours.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Athlete(walker, runner):\n",
+    "    def __init__(self, training_hours):\n",
+    "        self.training_hours = training_hours\n",
+    "\n",
+    "    def train(self):\n",
+    "        print(f\"Training for {self.training_hours} hours.\")\n",
+    "\n",
+    "athlete=Athlete(5)\n",
+    "athlete.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1394fd7a",
    "metadata": {},
    "outputs": [],
    "source": []
