--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -249,8 +249,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "1394fd7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "B's show method\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def show(self):\n",
+    "        print(\"A's show method\")\n",
+    "\n",
+    "class B(A):\n",
+    "    def show(self):\n",
+    "        print(\"B's show method\")\n",
+    "\n",
+    "class C(A):\n",
+    "    def show(self):\n",
+    "        print(\"C's show method\")\n",
+    "\n",
+    "class D(B, C):\n",
+    "    pass\n",
+    "d =D()\n",
+    "d.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f93057",
    "metadata": {},
    "outputs": [],
    "source": []
