--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -282,8 +282,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "49f93057",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Shape:\n",
+    "    def __init__(self, color):\n",
+    "        self.color = color\n",
+    "\n",
+    "class Circle(Shape):\n",
+    "    def __init__(self, color, radius):\n",
+    "        super().__init__(color)\n",
+    "        self.radius = radius\n",
+    "\n",
+    "circle = Circle('Red', 5)\n",
+    "print(circle.color, circle.radius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c50d74c",
    "metadata": {},
    "outputs": [],
    "source": []
