--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -310,8 +310,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1c50d74c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John M123\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "\n",
+    "class Employee:\n",
+    "    def __init__(self, employee_id):\n",
+    "        self.employee_id = employee_id\n",
+    "\n",
+    "class Manager(Person, Employee):\n",
+    "    def __init__(self, name, employee_id):\n",
+    "        super().__init__(name)\n",
+    "        Employee.__init__(self, employee_id)\n",
+    "\n",
+    "\n",
+    "manager = Manager('John', 'M123')\n",
+    "print(manager.name, manager.employee_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "084563f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car starting...\n",
+      "Vehicle starting...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def start(self):\n",
+    "        print(\"Vehicle starting...\")\n",
+    "\n",
+    "class Car(Vehicle):\n",
+    "    def start(self):\n",
+    "        print(\"Car starting...\")\n",
+    "        super().start()\n",
+    "\n",
+    "# Test\n",
+    "car = Car()\n",
+    "car.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34027080",
    "metadata": {},
    "outputs": [],
    "source": []
