--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -373,8 +373,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "34027080",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Flying...\n",
+      "Swimming...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Flyer:\n",
+    "    def fly(self):\n",
+    "        print(\"Flying...\")\n",
+    "\n",
+    "class Swimmer:\n",
+    "    def swim(self):\n",
+    "        print(\"Swimming...\")\n",
+    "\n",
+    "class Superhero(Flyer, Swimmer):\n",
+    "    pass\n",
+    "\n",
+    "# Test\n",
+    "superhero = Superhero()\n",
+    "superhero.fly()\n",
+    "superhero.swim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65cdf4c5",
    "metadata": {},
    "outputs": [],
    "source": []
