--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -406,8 +406,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "65cdf4c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    pass\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    pass\n",
+    "\n",
+    "# Test\n",
+    "animal = Animal()\n",
+    "cat = Cat()\n",
+    "print(isinstance(animal, Animal))  # True\n",
+    "print(isinstance(cat, Animal))  # True\n",
+    "print(isinstance(cat, Cat))  # True\n",
+    "print(isinstance(animal, Cat))  # False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ed059b",
    "metadata": {},
    "outputs": [],
    "source": []
