--- a/2)Assignments/Assignment12(class&objects)solution.ipynb
+++ b/2)Assignments/Assignment12(class&objects)solution.ipynb
@@ -439,11 +439,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a3ed059b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parrot says: Squawk!\n",
+      "Penguin says: Honk!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Bird:\n",
+    "    def speak(self):\n",
+    "        pass\n",
+    "\n",
+    "class Parrot(Bird):\n",
+    "    def speak(self):\n",
+    "        print(\"Parrot says: Squawk!\")\n",
+    "\n",
+    "class Penguin(Bird):\n",
+    "    def speak(self):\n",
+    "        print(\"Penguin says: Honk!\")\n",
+    "\n",
+    "# Test\n",
+    "birds = [Parrot(), Penguin()]\n",
+    "for bird in birds:\n",
+    "    bird.speak()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0f079532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apple iPhone 12 12 MP\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Device:\n",
+    "    def __init__(self, brand):\n",
+    "        self.brand = brand\n",
+    "\n",
+    "class Phone(Device):\n",
+    "    def __init__(self, brand, model):\n",
+    "        super().__init__(brand)\n",
+    "        self.model = model\n",
+    "\n",
+    "class Camera:\n",
+    "    def __init__(self, resolution):\n",
+    "        self.resolution = resolution\n",
+    "\n",
+    "class Smartphone(Phone, Camera):\n",
+    "    def __init__(self, brand, model, resolution):\n",
+    "        Phone.__init__(self, brand, model)\n",
+    "        Camera.__init__(self, resolution)\n",
+    "\n",
+    "# Test\n",
+    "smartphone = Smartphone('Apple', 'iPhone 12', '12 MP')\n",
+    "print(smartphone.brand, smartphone.model, smartphone.resolution)"
+   ]
   }
  ],
  "metadata": {
