--- a/1)Notes/9-Advanced python/Iterators.ipynb
+++ b/1)Notes/9-Advanced python/Iterators.ipynb
@@ -78,12 +78,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Due to lazy loading it will generate memory when the particular iteration perform\n",
     "# by doing this it will become memory efficient \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list=[1,2,3]\n",
+    "iterator=iter(my_list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43miterator\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "next(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_lst=[1,2,3]\n",
+    "iterator = iter(my_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are no elements in the iterator\n"
+     ]
+    }
+   ],
+   "source": [
+    "# to handle this error we use try except block\n",
+    "\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    print(next(iterator))\n",
+    "\n",
+    "except StopIteration:\n",
+    "    print(\"There are no elements in the iterator\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String Iterator \n",
+    "my_string=\"hello\"\n",
+    "string_iterator=iter(my_string)\n",
+    "\n",
+    "print(next(string_iterator))"
    ]
   }
  ],
