--- a/1)Notes/9-Advanced python/Generators.ipynb
+++ b/1)Notes/9-Advanced python/Generators.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generators are simpler way to create iterators. They use the yeild keyword to produce a series of values lazily. which means they generate values on the fly and do not store them in memory"
+    "# Generators "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "are simpler way to create iterators. They use the yeild keyword to produce a series of values lazily. which means they generate values on the fly and do not store them in memory"
    ]
   },
   {
@@ -124,15 +131,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Practical use of generator "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#--> it is used particularly reading large files \n",
+    "because they allow you to process one line at a time with out loading entire \n",
+    "file into memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object read_large_file at 0x000001B688AE5990>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_large_file(file_path):\n",
+    "    with open(file_path,'r') as file:\n",
+    "        for line in file:\n",
+    "            yield line\n",
+    "\n",
+    "read_large_file('sample.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sun dipped below the horizon,\n",
+      "painting the sky in hues of amber and violet as\n",
+      "the gentle hum of the evening breeze carried\n",
+      "the scent of blooming jasmine. A quiet street\n",
+      "lamp flickered to life, casting a golden\n",
+      "glow on the cobblestone path that wound\n",
+      "through the heart of the sleepy village.\n",
+      "Somewhere in the distance, the faint melody\n",
+      "of an old guitar drifted through the air,\n",
+      "accompanied by the rhythmic chirping of crickets.\n",
+      "It was a moment of serene stillness, where time\n",
+      "seemed to pause, inviting anyone who wandered into\n",
+      "the scene to bask in its quiet magic.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for line in read_large_file('sample.txt'):\n",
+    "    print(line.strip())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Practical use of generator --> it is used particularly reading large files \n",
-    "# because they allow you to process one line at a time with out loading entire \n",
-    "# file into memory"
-   ]
+   "source": []
   }
  ],
  "metadata": {
