--- a/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
+++ b/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
@@ -69,7 +69,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CountDown:\n",
+    "    def __init__(self,start):\n",
+    "        self.current=start\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current <=0:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current-=1\n",
+    "            return self.current\n",
+    "for number in CountDown(5):\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "e87472e7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
