--- a/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
+++ b/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
@@ -98,14 +98,51 @@
     "        else:\n",
     "            self.current-=1\n",
     "            return self.current\n",
-    "for number in CountDown(5):\n",
+    "for number in CountDown(5)\n",
     "    print(number)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e87472e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Myrange:\n",
+    "    def __init__(self,start,end):\n",
+    "        self.current = start\n",
+    "        self.end = end\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.current>=self.end:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current +=1\n",
+    "            return self.current - 1\n",
+    "        \n",
+    "for number in Myrange(1,5):\n",
+    "    print(number)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36c31f1c",
    "metadata": {},
    "outputs": [],
    "source": []
