--- a/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
+++ b/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
@@ -141,8 +141,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36c31f1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(n):\n",
+    "    a,b=0,1\n",
+    "    for _ in range(n):\n",
+    "        yield a\n",
+    "        a,b=b,a+b\n",
+    "\n",
+    "for num in fibonacci(5):\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2abc16f1",
    "metadata": {},
    "outputs": [],
    "source": []
