--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -122,6 +122,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# identity matrix\n",
+    "np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array:/n [[1 2 3 4 5]\n",
+      " [6 7 8 9 0]]\n",
+      "shape: (2, 5)\n",
+      "number of dimensions: 2\n",
+      "size (number of elements): 10\n",
+      "Data type: int32\n",
+      "Item size (in bytes): 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[1,2,3,4,5],[6,7,8,9,0]])\n",
+    "\n",
+    "print(\"Array:/n\",arr)\n",
+    "print(\"shape:\",arr.shape)\n",
+    "print(\"number of dimensions:\",arr.ndim)\n",
+    "print(\"size (number of elements):\",arr.size)\n",
+    "print(\"Data type:\",arr.dtype)\n",
+    "print(\"Item size (in bytes):\",arr.itemsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
