--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -175,10 +175,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "addition: [11 22 33 44 55]\n",
+      "subtraction: [ -9 -18 -27 -36 -45]\n",
+      "Multiplication: [ 10  40  90 160 250]\n",
+      "Division: [0.1 0.1 0.1 0.1 0.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numpy vectorized Operations\n",
+    "arr1 = np.array([1,2,3,4,5])\n",
+    "arr2 = np.array([10,20,30,40,50])\n",
+    "\n",
+    "# Element wise Addition\n",
+    "print(\"addition:\",arr1+arr2)\n",
+    "# Element wise Subtraction\n",
+    "print(\"subtraction:\",arr1-arr2)\n",
+    "# Element wise Multiplication\n",
+    "print(\"Multiplication:\",arr1*arr2)\n",
+    "# Element wise Divison\n",
+    "print(\"Division:\",arr1/arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Universal functions --> function that applies to entire array\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
