--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -206,13 +206,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41421356 1.73205081 2.        ]\n",
+      "[ 7.3890561  20.08553692 54.59815003]\n",
+      "[ 0.90929743  0.14112001 -0.7568025 ]\n",
+      "[0.69314718 1.09861229 1.38629436]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Universal functions --> function that applies to entire array\n",
+    "\n",
+    "arr = np.array([2,3,4])\n",
+    "# Square root function\n",
+    "print(np.sqrt(arr))\n",
+    "# Exponential function\n",
+    "print(np.exp(arr))\n",
+    "# sine function\n",
+    "print(np.sin(arr))\n",
+    "# natural log\n",
+    "print(np.log(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Universal functions --> function that applies to entire array\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
