--- a/1)Notes/10-Data Analysis/Numpy.ipynb
+++ b/1)Notes/10-Data Analysis/Numpy.ipynb
@@ -321,10 +321,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[100   2   3   4]\n",
+      " [  5   6   7   8]\n",
+      " [  9  10  11  12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Modifying array elements \n",
+    "arr[0,0]=100\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[100   2   3   4]\n",
+      " [100 100 100 100]\n",
+      " [100 100 100 100]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr[1:]=100\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Statistical concepts --> Normalization\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
