--- a/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
+++ b/2)Assignments/Assignment14(Advanced_Python)solution.ipynb
@@ -98,7 +98,7 @@
     "        else:\n",
     "            self.current-=1\n",
     "            return self.current\n",
-    "for number in CountDown(5)\n",
+    "for number in CountDown(5):\n",
     "    print(number)"
    ]
   },
